--- a/auth-api/.env
+++ b/auth-api/.env
@@ -1,6 +1,6 @@
-DATABASE_HOST=db
-DATABASE_PORT=5432
+DATABASE_HOST=postgres
+DATABASE_PORT=3002
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=secret
-DATABASE_NAME=d0ck3r
+DATABASE_NAME=docker
 JWT_SECRET=up_jwt_secret
