--- a/auth-interface/Dockerfile
+++ b/auth-interface/Dockerfile
@@ -1,19 +1,13 @@
-# Use the official Node.js runtime as the base image
 FROM node:20-alpine as build
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy the entire application code to the container
 COPY . .
 
-# Build the React app for production
 # RUN npm run build
 
 # Use Nginx as the production server
@@ -28,4 +22,4 @@ COPY . .
 # # Start Nginx when the container runs
 # CMD ["nginx", "-g", "daemon off;"]
 
-CMD ["npm", "run", "dev"]
+CMD [ "npm", "run", "start:dev" ]
