--- a/auth-api/.env
+++ b/auth-api/.env
@@ -1,5 +1,5 @@
-DATABASE_HOST=postgres
-DATABASE_PORT=3002
+DATABASE_HOST=db
+DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=secret
 DATABASE_NAME=docker
