--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
     build:
       context: ./auth-interface
     ports:
-      - "8080:80"
+      - "4200:4200"
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
@@ -18,8 +18,6 @@ services:
       - backend
 
   backend:
-    # container_name: d0ck3r-server
-    restart: always
     build:
       context: ./auth-api
     volumes:
@@ -27,21 +25,22 @@ services:
     depends_on:
       - db
     ports:
-      - "3000:3000"
+      - 3000
     networks:
       - d0ck3r-network
 
   db:
     image: postgres:17-alpine
-    # container_name: d0ck3r-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: d0ck3r
+      POSTGRES_DB: docker
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     networks:
       - d0ck3r-network
+    ports:
+      - 5432
 
 networks:
   d0ck3r-network:
