--- a/auth-interface/package.json
+++ b/auth-interface/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 8585",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
