--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -1,37 +1,33 @@
+
+include mime.types;
+
 server {
+    listen 443 ssl;
+    server_name localhost;
 
-        root /var/www/your_domain/html;
-        index index.html;
+    ssl_certificate     /etc/ssl/certs/localhost.crt;
+    ssl_certificate_key /etc/ssl/private/localhost.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
 
-        server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        location / {
-                try_files $uri $uri/ =404;
-        }
+    location / {
+        return 301 /login;
+    }
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/your_domain/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/your_domain/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    location /login {
+        root /usr/share/nginx/html/server/app;
+        index login.html;
+        try_files $uri $uri/ $uri.html =404;
+    }
 
+    location /register {
+        try_files $uri $uri/ $uri.html =404;
+    }
 
-}
-server {
-    if ($host = www.your_domain) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = your_domain) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-        listen 80;
-        listen [::]:80;
-
-        server_name your_domain www.your_domain;
-    return 404; # managed by Certbot
+    location /auth/ {
+        proxy_pass http://backend:3000;
+    }
 }
