--- a/auth-interface/Dockerfile
+++ b/auth-interface/Dockerfile
@@ -19,12 +19,14 @@ FROM nginx:1.27.2-alpine
 # RUN rm /usr/share/nginx/html/*
 
 # COPY --from=build /app/build /usr/share/nginx/html
-COPY --from=build /app/.next/* /usr/share/nginx/html
+COPY --from=build /app/.next /usr/share/nginx/html/_next
+COPY --from=build /app/.next/server/app /usr/share/nginx/html/
 COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/nginx/localhost.crt /etc/ssl/certs/
 COPY --from=build /app/nginx/localhost.key /etc/ssl/private/
 
 # # Expose port 80 for the Nginx server
+EXPOSE 80
 EXPOSE 443
 
 # # Start Nginx when the container runs
