--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -1,33 +1,77 @@
 
 include mime.types;
 
+# server {
+#     listen 443 ssl;
+#     server_name localhost;
+
+#     ssl_certificate     /etc/ssl/certs/localhost.crt;
+#     ssl_certificate_key /etc/ssl/private/localhost.key;
+#     ssl_protocols       TLSv1.2 TLSv1.3;
+#     ssl_ciphers         'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+
+#     root /usr/share/nginx/html;
+#     index index.html;
+
+#     location / {
+#         return 301 /login;
+#     }
+
+#     location /login/ {
+        
+#         root /usr/share/nginx/html/server/app;
+#         proxy_pass http://backend:3000;
+#         # index login.html;
+#         try_files $uri $uri/ $uri.html =404;
+#     }
+
+#     location /register/ {
+#         try_files $uri $uri/ $uri.html =404;
+#     }
+
+#     location /auth/ {
+#         proxy_pass http://backend:3000;
+#     }
+# }
+
+server {
+    listen 80;
+    server_name localhost;  # Replace with your domain or IP address
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
+
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name localhost;  # Replace with your domain or IP address
 
-    ssl_certificate     /etc/ssl/certs/localhost.crt;
-    ssl_certificate_key /etc/ssl/private/localhost.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    # SSL configuration
+    ssl_certificate /etc/ssl/certs/localhost.crt;  # Path to your SSL certificate
+    ssl_certificate_key /etc/ssl/private/localhost.key;  # Path to your SSL certificate key
 
-    root /usr/share/nginx/html;
-    index index.html;
-
+    # Serve static files
     location / {
-        return 301 /login;
+        root /usr/share/nginx/html/;  # Replace with the path to your static files
+        index index.html;
+        try_files $uri $uri.html $uri/ =404;  # Serve files or return 404 if not found
+        
     }
 
-    location /login {
-        root /usr/share/nginx/html/server/app;
-        index login.html;
-        try_files $uri $uri/ $uri.html =404;
+    # Forward requests to the backend for login and signup
+    location /auth/login {
+        proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /register {
-        try_files $uri $uri/ $uri.html =404;
-    }
-
-    location /auth/ {
-        proxy_pass http://backend:3000;
+    location /auth/signup {
+        proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
