--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -25,20 +25,25 @@ server {
         
     }
 
-    # Forward requests to the backend for login and signup
+    # Proxy requests for login form submission
     location /auth/login {
-        proxy_pass http://backend:3000/auth/login;
+        proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";  # Handle keep-alive connections
     }
 
+    # Proxy requests for signup form submission
     location /auth/signup {
-        proxy_pass http://backend:3000/auth/signup;  
+        proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";  # Handle keep-alive connections
     }
 }
