--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -19,31 +19,69 @@ server {
 
     # Serve static files
     location / {
+        
         root /usr/share/nginx/html/;  # Replace with the path to your static files
         index index.html;
         try_files $uri $uri.html $uri/ =404;  # Serve files or return 404 if not found
         
     }
 
-    # Proxy requests for login form submission
-    location /auth/login {
-        proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";  # Handle keep-alive connections
-    }
+    # Handle form submission
+    # location /login {
 
-    # Proxy requests for signup form submission
-    location /auth/signup {
-        proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";  # Handle keep-alive connections
-    }
+    #     root /usr/share/nginx/html/;  # Replace with the path to your static files
+    #     index login.html;
+    #     try_files login login.html login/ =404;  # Serve files or return 404 if not found
+
+    #     # Handle POST requests to forward to the backend
+    #     if ($request_method = POST) {
+    #         proxy_pass http://backend:3000/auth/login;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_redirect off;
+    #     }
+
+    # }
+
+    # location /register {
+
+    #     root /usr/share/nginx/html/;  # Replace with the path to your static files
+    #     index register.html;
+    #     try_files register register.html register/ =404;  # Serve files or return 404 if not found
+
+    #     # Handle POST requests to forward to the backend
+    #     if ($request_method = POST) {
+    #         proxy_pass http://backend:3000/auth/signup;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_redirect off;
+    #     }
+
+    # }
+
+    # Proxy requests for login form submission
+    # location /auth/login {
+    #     proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Connection "";  # Handle keep-alive connections
+    # }
+
+    # # Proxy requests for signup form submission
+    # location /auth/signup {
+    #     proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Connection "";  # Handle keep-alive connections
+    # }
 }
