fix routing, now every uri including '/auth' handles with one block of code in nginx.conf

--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     server_name localhost;  # Replace with your domain or IP address
 
     # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    return 301 https://$host:443$request_uri;
 }
 
 server {
@@ -26,27 +26,40 @@ server {
         
     }
 
-    location /auth/login {
-        proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
+    location /auth {
+        proxy_pass http://172.18.0.3:3000$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
-        proxy_set_header Connection "";  # Handle keep-alive connections
+        proxy_set_header Connection "";
+        proxy_read_timeout 90;
     }
 
-    location /auth/signup {
-        proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";  # Handle keep-alive connections
-    }
 
-    # # Proxy requests for signup form submission
+    # location /auth {
+
+    #     proxy_pass http://backend:3000$request_uri;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Connection "";
+
+    # }
+
+    # location /auth/login {
+    #     proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Connection "";  # Handle keep-alive connections
+    # }
+
     # location /auth/signup {
     #     proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
     #     proxy_set_header Host $host;
@@ -56,4 +69,5 @@ server {
     #     proxy_http_version 1.1;
     #     proxy_set_header Connection "";  # Handle keep-alive connections
     # }
+
 }
