--- a/auth-interface/nginx/nginx.conf
+++ b/auth-interface/nginx/nginx.conf
@@ -27,7 +27,7 @@ server {
     }
 
     location /auth {
-        proxy_pass http://172.18.0.3:3000$request_uri;
+        proxy_pass http://backend:3000$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,26 +36,5 @@ server {
         proxy_set_header Connection "";
         proxy_read_timeout 90;
     }
-
-
-    # location /auth/login {
-    #     proxy_pass http://backend:3000/auth/login;  # Change 'backend' to your backend service name or IP
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Connection "";  # Handle keep-alive connections
-    # }
-
-    # location /auth/signup {
-    #     proxy_pass http://backend:3000/auth/signup;  # Change 'backend' to your backend service name or IP
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Connection "";  # Handle keep-alive connections
-    # }
 
 }
