--- a/compose.yml
+++ b/compose.yml
@@ -9,9 +9,9 @@ services:
     ports:
       - 443:443
       - 81:80
-    volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
+    # volumes:
+      # - ./frontend:/usr/src/app
+      # - /usr/src/app/node_modules
     restart: always
     networks:
       - d0ck3r-network
